tests/ui/no_generics.stderr
error[E0599]: no method named `build` found for struct `MyStructBuilder<true, false>` in the current scope
  --> tests/ui/no_generics.rs:12:10
   |
1  | #[derive(tidy_builder::Builder)]
   |          --------------------- method `build` not found for this
...
12 |         .build();
   |          ^^^^^ method not found in `MyStructBuilder<true, false>`
   |
   = note: the method was found for
           - `MyStructBuilder<true, true>`
